# edge-vision-lab

./: README.md
.github/workflows/: ci.yml
crates/edge-vision/: Cargo.toml
crates/edge-vision/src/: lib.rs
web/: index.html
web/src/: app.js  styles.css
