[package]
name = "edge-vision"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust edge vision pipeline with calibration, motion detection, tracking, and WASM snapshots"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

[features]
default = []
